# usb2-highspeed-core

./: pyproject.toml  requirements.txt  tox.ini
docs/: features.rst
examples/: isochronous_count.py
