[tool.poetry]
name = "luna"
description = "USB2 highspeed core, written in Amaranth HDL"
license = "BSD"
version = "0.2.0"
authors = [
    {name = "Great Scott Gadgets", email = "dev@greatscottgadgets.com"},
    {name = "Hans Baier", email = "foss@hans-baier.de"},
]
readme = "README.md"
requires-python = "~=3.8"
dependencies = [
    "apollo_fpga @ git+https://github.com/greatscottgadgets/apollo.git", # temporarily pull from git until apollo release
    "libusb1>1.9.2",
    "pyserial>=3.5",
    "pyusb>1.1.1",
    "pyvcd>=0.2.4",
    "amaranth~=0.4.0",
    "amaranth-boards @ git+https://github.com/amaranth-farm/amaranth-boards.git@main",
    "usb-descriptors @ git+https://github.com/hansfbaier/python-usb-descriptors.git@main",
    "amlib @ git+https://github.com/amaranth-farm/amlib@main"}
]

[tool.poetry.dev-dependencies]
tox = "^3.22.0"
amaranth-stdio = {git = "https://github.com/amaranth-lang/amaranth-stdio.git", branch="main"}
prompt-toolkit = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"